--- a/my_app/src/components/homework/modal.css
+++ b/my_app/src/components/homework/modal.css
@@ -7,6 +7,11 @@ body.active-modal {
     display: block;
     margin: 100px auto 0;
     font-size: 18px;
+    background-color: blue;
+    color: #ffff;
+    border-radius: 6px;
+    border: 1px solid transparent;
+    cursor: pointer;
 }
 
 .modal, .overlay {
@@ -40,4 +45,9 @@ body.active-modal {
     top: 10px;
     right: 10px;
     padding: 5px 7px;
+    background-color: blue;
+    color: #ffff;
+    border-radius: 6px;
+    border: 1px solid transparent;
+    cursor: pointer;
 }
